--- a/projects/admin/src/app/inventory/inventory.component.html
+++ b/projects/admin/src/app/inventory/inventory.component.html
@@ -2,10 +2,32 @@
   <div class="col-lg-12">
     <div class="card">
       <div class="card-header">
-        Inventory
+        Inventory<button class="btn btn-primary"> Create
+
+
+        </button>
 
       </div>
       <div class="card-body">
+<!--
+        <div class="modal show" style="display: block ;" tabindex="1">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title">Modal title</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <p>Modal body text goes here.</p>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+              </div>
+            </div>
+          </div>
+        </div> -->
+
         <table class="table">
           <thead>
             <th scope="col"> Drink </th>
